# boxlite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json
.claude/: settings.json
.claude/agents/: commit-push-auditor.md  verdict-auditor.md
.claude/hooks/: preflight-commit-push.sh  preflight-commit-push.test.sh  preflight-pr-review.sh  preflight-pr-review.test.sh  preflight-verdict-check.sh  preflight-verdict-check.test.sh  run-verdict-audit.sh  run-verdict-audit.test.sh
.codex/: hooks.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: README.md  e2e-local.yml
apps/: package.json
apps/api-client-go/: api_admin.go  api_box.go  api_organizations.go  api_runners.go  api_workspace.go  client.go  model_admin_box_item.go  model_admin_box_owner.go  model_admin_machine_item.go  model_admin_observability_audit_log.go  model_admin_observability_backend_status_dto.go  model_admin_observability_click_stack_links.go  model_admin_observability_click_stack_source_setup.go  model_admin_observability_commands.go  model_admin_observability_correlation.go  model_admin_observability_external_links.go  model_admin_observability_investigate_response.go  model_admin_observability_layer_signals_dto.go  model_admin_observability_layer_status_dto.go  model_admin_observability_operation.go  model_admin_observability_resource_summary.go  model_admin_observability_s3_object.go  model_admin_observability_source_status.go  model_admin_observability_status_dto.go  model_admin_observability_timeline_event.go  model_admin_observability_x_log.go  model_admin_overview.go  model_admin_overview_boxes.go  model_admin_overview_cluster.go  model_admin_overview_runners.go  model_admin_runner.go  model_admin_runner_item.go  model_admin_user_item.go  model_box.go  model_box_desired_state.go  model_box_state.go  model_boxlite_configuration.go  model_create_box.go  model_create_region.go  model_create_region_response.go  (+16 more)
apps/api-client-go/.openapi-generator/: FILES
apps/api-client-go/api/: openapi.yaml
apps/api/src/admin/dto/: admin-overview.dto.ts
apps/api/src/admin/services/: observability.service.spec.ts  observability.service.ts  overview.service.ts
apps/api/src/box/dto/: box.dto.spec.ts  box.dto.ts  list-boxes-query.dto.ts
apps/api/src/box/entities/: box.entity.spec.ts  box.entity.ts
apps/api/src/box/repositories/: box.repository.ts
apps/api/src/box/runner-adapter/: runnerAdapter.v0.ts  runnerAdapter.v2.ts
apps/api/src/box/services/: box-lookup-cache-invalidation.service.ts  box.service.box-id.spec.ts  box.service.ts
apps/api/src/box/utils/: box-lookup-cache.util.ts
apps/api/src/boxlite-rest/mappers/: box-to-box.mapper.spec.ts  box-to-box.mapper.ts
apps/api/src/migrations/: 1741087887225-migration.ts
apps/common-go/: go.mod  go.sum
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/components/BoxTable/: BoxTableActions.tsx  BoxTableHeader.tsx  columns.tsx  types.ts  useBoxTable.ts
apps/dashboard/src/components/admin/: AdminPeopleBoxesView.tsx  adminDiagnoseTarget.ts  adminHelpers.spec.ts  adminHelpers.ts
apps/dashboard/src/components/ui/: scroll-area.tsx
apps/dashboard/src/enums/: RoutePath.ts
apps/dashboard/src/hooks/: useBoxWsSync.ts
apps/dashboard/src/lib/: box-identity.test.ts  box-identity.ts
apps/infra-local/: Makefile  README.md  api.env  pyproject.toml
apps/infra-local/compose/: __init__.py  __main__.py  _sdk.py  config.py  doctor.py  native.py  orchestrator.py  services.py
apps/libs/api-client/src/: api.ts
apps/libs/api-client/src/.openapi-generator/: FILES
apps/libs/api-client/src/api/: admin-api.ts  box-api.ts  organizations-api.ts  runners-api.ts  workspace-api.ts
apps/libs/api-client/src/docs/: AdminApi.md  AdminBoxItem.md  AdminBoxOwner.md  AdminMachineItem.md  AdminObservabilityAuditLog.md  AdminObservabilityBackendStatusDto.md  AdminObservabilityClickStackLinks.md  AdminObservabilityClickStackSourceSetup.md  AdminObservabilityCommands.md  AdminObservabilityCorrelation.md  AdminObservabilityExternalLinks.md  AdminObservabilityXLog.md  (+43 more)
apps/runner/pkg/boxlite/: client.go  daemon_env_test.go  stubs.go
docs/: README.md
docs/ci/: e2e-local.md
docs/design/: deploy-admin-prd.html
docs/legal/: CLA.md
docs/reference/cli/: README.md
make/: test.mk
openapi/: box.openapi.yaml
scripts/test/e2e/cases/: conftest.py  test_c_entry.py  test_cli_detach_recovery.py  test_cli_entry.py  test_error_code_mapping.py  test_errors.py  test_exec_attach.py  test_exec_timeout.py  test_files_io.py  test_go_entry.py  test_lifecycle.py  test_node_entry.py  test_node_tunnel.py  test_path_verification.py  test_quota_enforcement.py  test_runner_concurrency.py  test_sdk_tunnel.py  test_shutdown.py
scripts/test/e2e/fixtures/: service_in_box_server.py
sdks/c/src/exec/: command.rs
sdks/node/: Cargo.toml  package.json
sdks/node/lib/: index.ts  native-contracts.ts  simplebox.ts
sdks/node/src/: box_handle.rs  lib.rs  network.rs
sdks/node/tests/: tunnel.test.ts
sdks/python/: Cargo.toml  pyproject.toml  pytest.ini
sdks/python/boxlite/: __init__.py  simplebox.py
sdks/python/boxlite/sync_api/: __init__.py  _box.py  _network.py  _simplebox.py
sdks/python/src/: box_handle.rs  lib.rs  network.rs
sdks/python/tests/: test_dev_tunnel_e2e.py  test_simplebox.py  test_tunnel.py  test_volume_port_persistence.py
src/boxlite/: Cargo.toml
src/boxlite/src/disk/: qcow2.rs
src/boxlite/src/jailer/common/: rlimit.rs
src/boxlite/src/litebox/: box_impl.rs  exec.rs  mod.rs  network.rs
src/boxlite/src/net/: mod.rs
src/boxlite/src/net/gvproxy/: ffi.rs  services.rs
src/boxlite/src/rest/: client.rs  litebox.rs  runtime.rs
src/boxlite/src/runtime/: advanced_options.rs  backend.rs
src/boxlite/tests/: gvproxy_backend.rs  health_check.rs
src/cli/src/: cli.rs  main.rs
src/cli/src/commands/: exec.rs  mod.rs  run.rs  tunnel.rs
src/cli/tests/: auth.rs  gvproxy_port_conflict.rs  lifecycle_journey.rs  run.rs
src/cli/tests/common/: mod.rs
src/guest/src/container/: start.rs
src/test-utils/src/: home.rs
(+68 files in other folders)
