[workspace]
members = [
    "src/boxlite",
    "src/cli",
    "src/shared",
    "src/guest",
    "src/shim",
    "src/test-utils",
    "src/deps/bubblewrap-sys",
    "src/deps/e2fsprogs-sys",
    "src/deps/libgvproxy-sys",
    "src/deps/libkrun-sys",
    "sdks/c",
    "sdks/python",
    "sdks/node",
]
exclude = ["build/tmp", "target", ".venv", "examples/*/.venv"]

resolver = "2"

[workspace.dependencies]
boxlite = { path = "src/boxlite", version = "0.9.7" }
boxlite-shared = { path = "src/shared", version = "0.9.7" }
bubblewrap-sys = { path = "src/deps/bubblewrap-sys", version = "0.9.7" }
e2fsprogs-sys = { path = "src/deps/e2fsprogs-sys", version = "0.9.7" }
libgvproxy-sys = { path = "src/deps/libgvproxy-sys", version = "0.9.7" }
libkrun-sys = { path = "src/deps/libkrun-sys", version = "0.9.7" }

[patch.crates-io]
# Pull in youki PR #3504 (split intermediate/init readiness channels) which
# fixes the InitReady/IntermediateReady race under concurrent ContainerBuilder
# builds. Not in any tagged release yet (post-v0.6.0).
libcontainer = { git = "https://github.com/youki-dev/youki", rev = "4b2f0e00a4a11107f3a338c21c17407d2f664ec9" }

[workspace.package]
version = "0.9.7"
edition = "2024"
authors = ["Dorian Zheng <https://github.com/dorianzheng>"]
license = "Apache-2.0"
rust-version = "1.88"
