[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-local"
version = "0.1.0"
description = "Local dev-stack orchestrator for apps/infra-local (the `compose` package)."
requires-python = ">=3.10"
dependencies = ["boxlite>=0.8"]

[tool.setuptools.packages.find]
include = ["compose*"]
