[package]
name = "boxlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Embeddable virtual machine runtime for secure, isolated code execution"
repository = "https://github.com/boxlite-ai/boxlite"
readme = "../../README.md"
keywords = ["vm", "sandbox", "isolation", "container", "security"]
categories = ["virtualization"]
links = "boxlite"

[lints]
workspace = true
[package.metadata.docs.rs]
no-default-features = true  # Build docs without native deps (API-only)

[lib]
name = "boxlite"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["embedded-runtime", "krunfw", "e2fsprogs", "bubblewrap"]
gvproxy = ["dep:libgvproxy-sys"]                             # Shim-side libgvproxy CGO shared library
e2fsprogs = ["dep:e2fsprogs-sys"]                            # Bundled mke2fs for ext4 image creation
bubblewrap = ["dep:bubblewrap-sys"]                          # Bundled bwrap for sandbox isolation (Linux)
krunfw = ["dep:libkrun-sys", "libkrun-sys/krunfw"]           # Package libkrunfw artifacts
krunfw-source = ["krunfw", "libkrun-sys/krunfw-source"]      # Package source-built raw kernel and shared library; static musl packages only the raw kernel
krun = ["krunfw", "libkrun-sys/krun"]                         # Compile the vendored libkrun runtime (and package required libkrunfw artifacts)
rest = ["dep:hyper-rustls", "dep:reqwest", "dep:rustls", "dep:urlencoding", "dep:tokio-tungstenite"]  # REST API client backend
embedded-runtime = []                                        # Embed runtime binaries via include_bytes!
test-support = []                                            # Expose internal constructors for cross-crate tests

[dependencies]
boxlite-shared.workspace = true

e2fsprogs-sys = { workspace = true, optional = true }
libgvproxy-sys = { workspace = true, optional = true }
libkrun-sys = { workspace = true, optional = true }

thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time", "process", "io-util", "signal"] }
tokio-util = "0.7"
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
tonic = "0.12"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
# gvproxy ServicesMux control client (HTTP/1.1 over the per-box unix socket).
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", features = ["http1", "rustls-native-certs"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"], optional = true }
http-body-util = "0.1"
bytes = "1"
uuid = { version = "1.10", features = ["v4"] }
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
tracing-appender = "0.2"
sysinfo = "0.30"
libc = "0.2"
rayon = "1.10"
rusqlite = { version = "0.39", features = ["bundled"] }
parking_lot = "0.12"
inventory = "0.3"
clap = { version = "4.5", features = ["derive"] }
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.8.3"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
xattr = "1.0"
walkdir = "2.5"
filetime = "0.2"
tempfile = "3.8"
tokio-stream = "0.1.17"
term_size = "0.3"
qcow2-rs = "0.1.6"
zstd = "0.13"
nix = { version = "0.30.1", features = ["mount"] }
rand = "0.9.3"
hex = "0.4.3"
signal-hook = "0.3"
reflink-copy = "0.1"
nanoid = "0.4"
rcgen = "0.13"
time = "0.3"

# REST backend (optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], optional = true, default-features = false }
urlencoding = { version = "2.1", optional = true }
tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# Linux-specific dependencies for bind mount support
[target.'cfg(target_os = "linux")'.dependencies]
bubblewrap-sys = { workspace = true, optional = true }  # Bundled bwrap for sandbox isolation

caps = "0.5"
fuse-backend-rs = { version = "0.12", features = ["fusedev"] }
seccompiler = "0.4"  # Generate seccomp BPF filters for jailer
bincode = "2.0"     # Deserialize compiled BPF filters
displaydoc = "0.2"  # Display derive macro for error types
landlock = "0.4"    # Landlock LSM filesystem/network restrictions (defense-in-depth)
pathrs = "0.2"      # openat2(RESOLVE_IN_ROOT) safe path resolution for OCI extraction (GHSA-f396-4rp4-7v2j)

[build-dependencies]
pkg-config = "0.3"
regex = "1"
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.build-dependencies]
cc = "1"  # Compile C helpers (KVM smoke test)
seccompiler = { version = "0.4", features = ["json"] }  # Compile JSON filters to BPF at build time
bincode = "2.0"  # Serialize compiled BPF filters

[dev-dependencies]
boxlite-test-utils = { path = "../test-utils" }
notify = "6.1"
proptest = "1.4"
toml = "0.8"
